--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -6,4 +6,7 @@
     .btn {
         @apply text-gray-100 text-lg py-2 px-4 bg-indigo-400 hover:bg-indigo-600 rounded-full
     }
+    .btn-red {
+        @apply text-gray-100 text-lg py-2 px-4 bg-red-400 hover:bg-red-600 rounded-full
+    }
 }
